# maki

./: AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: python.yml  release.yml  rust.yml
maki-agent/: Cargo.toml
maki-agent/src/: agent.rs  auth.rs  cancel.rs  client.rs  lib.rs  skill.rs  tool.rs  types.rs
maki-agent/src/agent/: instructions.rs  mod.rs  run.rs  streaming.rs  tool_dispatch.rs
maki-agent/src/mcp/: config.rs  http.rs  mod.rs  stdio.rs  transport.rs
maki-agent/src/prompts/: general.md  system.md
maki-agent/src/tools/: bash.rs  batch.md  batch.rs  code_execution.md  code_execution.rs  grep.rs  memory.rs  mod.rs  question.md  question.rs  read.md  read.rs  task.md  task.rs  todowrite.md  webfetch.md  webfetch.rs  websearch.md  websearch.rs  write.rs
maki-code-index/src/: common.rs
maki-config/: Cargo.toml
maki-config-macro/: Cargo.toml
maki-config-macro/src/: lib.rs
maki-config/src/: lib.rs
maki-docgen/: Cargo.toml
maki-docgen/src/: gen_config.rs  gen_keybindings.rs  gen_providers.rs  gen_tools.rs  main.rs
maki-providers/src/: lib.rs  model.rs  provider.rs  types.rs
maki-providers/src/providers/: dynamic.rs  mod.rs  openai.rs  openai_compat.rs  zai.rs
maki-providers/src/providers/anthropic/: auth.rs  mod.rs
maki-providers/src/providers/openai/: auth.rs  mod.rs  platform.rs  responses.rs
maki-storage/src/: lib.rs  sessions.rs  theme.rs
maki-ui/: Cargo.toml
maki-ui/src/: app.rs  chat.rs  event_loop.rs  highlight.rs  image.rs  lib.rs  markdown.rs  mock.rs  render_worker.rs  selection.rs  storage_writer.rs  text_buffer.rs  theme.rs
maki-ui/src/agent/: agent_loop.rs  cancel_map.rs  command_router.rs  mod.rs
maki-ui/src/app/: mod.rs  mode.rs  mouse.rs  queue.rs  session.rs  tests.rs  view.rs
maki-ui/src/components/: btw_modal.rs  chat_picker.rs  code_view.rs  command.rs  help_modal.rs  input.rs  keybindings.rs  list_picker.rs  mcp_picker.rs  memory_modal.rs  messages.rs  mod.rs  question_form.rs  queue_panel.rs  rewind_picker.rs  status_bar.rs  tool_display.rs
maki-ui/src/components/messages/: mod.rs
scripts/: collect.py  compare.py
scripts/providers/: openrouter
site/: index.html
site/docs/content/architecture/: _index.md
site/docs/content/configuration/: _index.md
site/docs/content/headless/: _index.md
site/docs/content/keybindings/: _index.md
site/docs/content/mcp/: _index.md
site/docs/content/permissions/: _index.md
site/docs/content/providers/: _index.md
site/docs/content/quick-start/: _index.md
site/docs/content/tools/: _index.md
site/docs/templates/: base.html
src/: main.rs  print.rs
