[package]
name = "maki-config"
version.workspace = true
edition.workspace = true

[dependencies]
maki-config-macro = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
