[package]
name = "maki-docgen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "maki-docgen"
path = "src/main.rs"

[dependencies]
maki-agent = { workspace = true }
maki-config = { workspace = true }
maki-providers = { workspace = true }
maki-ui = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
